# legged_ros2

./: AGENTS.md  README.md
bishe_bridge/: CMakeLists.txt  README.md  package.xml
bishe_bridge/bishe_bridge/: __init__.py  box_pose_node.py  cmd_vel_node.py  common.py  dds_state.py  dds_state_writer.py  goal_pose_node.py  odom_node.py  rl_cmd_vel_writer.py  ros_params.py  scene_objects_node.py  skill_command_node.py  skill_status_node.py  state_bridge_node.py  state_file.py
bishe_bridge/launch/: bishe_bridge.launch.py
docker/: Dockerfile  Dockerfile.installation.verify  setup.sh  setup_local.sh
docs/: DataFlow.md  add_new_robot.md  add_new_robot_zh.md  architecture.md  architecture_zh.md  installation.md  installation_zh.md  mapping.md  mapping_zh.md  misc.md  misc_zh.md  rl_customization.md  rl_customization_zh.md  temp.md  temp_zh.md  usage.md  usage_zh.md
docs/superpowers/plans/: 2026-04-18-go2-jazzy2-rl-heightmap-migration.md
docs/superpowers/specs/: 2026-04-18-go2-jazzy2-rl-heightmap-migration-design.md
legged_mapping/: CMakeLists.txt  package.xml
legged_mapping/launch/: mid360_mapping.launch.py
legged_mapping/src/: dual_imu_static_tf.cpp  gravity_alignment.cpp  mid360_imu.cpp
legged_rl_controller/: CMakeLists.txt  package.xml
legged_rl_controller/include/legged_rl_controller/: legged_articulation.hpp  legged_rl_controller.hpp
legged_rl_controller/include/legged_rl_controller/isaaclab/algorithms/: algorithms.h
legged_rl_controller/include/legged_rl_controller/isaaclab/assets/articulation/: articulation.h
legged_rl_controller/include/legged_rl_controller/isaaclab/envs/: manager_based_rl_env.h
legged_rl_controller/include/legged_rl_controller/isaaclab/envs/mdp/actions/: joint_actions.h
legged_rl_controller/include/legged_rl_controller/isaaclab/envs/mdp/observations/: observations.h
legged_rl_controller/include/legged_rl_controller/isaaclab/manager/: action_manager.h  manager_term_cfg.h  observation_manager.h
legged_rl_controller/src/: legged_rl_controller.cpp
legged_robot_description/g1_description/: CMakeLists.txt  package.xml
legged_robot_description/g1_description/config/main_loop/: broadcasters_only.yaml  rl.yaml  static.yaml
legged_robot_description/g1_description/config/ros2_control/: broadcasters_only.yaml  rl.yaml  static.yaml
legged_robot_description/g1_description/launch/: bringup_broadcasters.launch.py  bringup_rl.launch.py  bringup_static.launch.py
legged_robot_description/g1_description/urdf/: g1_29dof_lock_waist_rev_1_0.ros2_control.xacro  test.urdf
legged_robot_description/go2_description/: CMakeLists.txt  package.xml
legged_robot_description/go2_description/config/main_loop/: broadcasters_only.yaml  rl.yaml  static.yaml
legged_robot_description/go2_description/config/rl_policy/: IO_descriptors.yaml  README.md  normalize_io_descriptors.py  policy.onnx
legged_robot_description/go2_description/config/ros2_control/: broadcasters_only.yaml  rl.yaml  static.yaml
legged_robot_description/go2_description/launch/: bringup_broadcasters.launch.py  bringup_rl.launch.py  bringup_static.launch.py  view_robot.launch.py
legged_robot_description/go2_description/urdf/: leg.xacro  robot.xacro  ros2_control.xacro  test.urdf
legged_ros2_control/: CMakeLists.txt  legged_ros2_control_plugins.xml  package.xml
legged_ros2_control/include/legged_ros2_control/: legged_ros2_control.hpp  legged_system_interface.hpp
legged_ros2_control/include/legged_ros2_control/robots/unitree_g1/: g1_lowlevel_node.hpp  g1_system_interface.hpp  g1_wireless_controller.hpp  motor_crc_hg.h
legged_ros2_control/include/legged_ros2_control/robots/unitree_go2/: go2_lowlevel_node.hpp  go2_system_interface.hpp  go2_wireless_controller.hpp  motor_crc.h
legged_ros2_control/src/: legged_ros2_control.cpp  legged_system_interface.cpp
legged_ros2_control/src/robots/unitree_g1/: CMakeLists.txt  g1_lowlevel_node.cpp  g1_main_loop.cpp  g1_system_interface.cpp  g1_wireless_controller.cpp  motor_crc_hg.cpp
legged_ros2_control/src/robots/unitree_go2/: CMakeLists.txt  go2_lowlevel_node.cpp  go2_main_loop.cpp  go2_system_interface.cpp  go2_wireless_controller.cpp  motor_crc.cpp
legged_ros2_controller/include/legged_ros2_controller/semantic_components/: joint_interface.hpp
